[frontend] 캘린더 5차수정
-popover시 데이터가 정상적으로 추가
-popover 디자인 간략 수정

--- a/frontend/src/Components/Calendar/Calendar.css
+++ b/frontend/src/Components/Calendar/Calendar.css
@@ -115,3 +115,22 @@
   position: absolute;
   top: 106px;
 }
+
+.calendar-popover {
+  padding: 10px 5px;
+  width: 200px;
+  max-height: 250px;
+}
+
+.calendar-popover-header {
+  height: 50px;
+  /* padding: 10px 0; */
+  border-bottom: 1px solid #ddd;
+}
+
+.calendar-popover-content {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  padding-top: 5px;
+}
