--- a/frontend/src/Components/Profile/PostAppend.css
+++ b/frontend/src/Components/Profile/PostAppend.css
@@ -92,3 +92,24 @@
 }
 
 /* postShareAppend css */
+.MuiPickersToolbar-toolbar {
+  background-color: rgba(20, 81, 51, 0.8) !important;
+}
+.MuiPickersDay-daySelected {
+  background-color: rgba(20, 81, 51, 0.8) !important;
+}
+.MuiPickersClockPointer-pointer {
+  background-color: rgba(20, 81, 51, 0.8) !important;
+}
+.MuiPickersClock-pin {
+  background-color: rgba(20, 81, 51, 0.8) !important;
+}
+.MuiPickersClockPointer-noPoint {
+  background-color: rgba(20, 81, 51, 0.8) !important;
+}
+.MuiPickersClockPointer-thumb {
+  border: 14px solid rgba(20, 81, 51, 0.8) !important;
+}
+.MuiInput-underline:after {
+  border-bottom: 2px solid rgba(20, 81, 51, 0.8) !important;
+}
