--- a/frontend/src/Components/Profile/PostAppend.css
+++ b/frontend/src/Components/Profile/PostAppend.css
@@ -54,17 +54,25 @@
   height: 40px;
 }
 .plus-button-design {
-  padding: 0px 10px;
   margin: 0px 5px;
-  display: flex;
-  align-items: center;
   box-shadow: 0px 1px 3px rgba(161, 159, 159, 0.8);
 }
 .plus-button-design:hover {
   background-color: rgba(161, 159, 159, 0.3);
   cursor: pointer;
 }
-
+.selected {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(161, 159, 159, 0.2);
+}
+.plus-button-design-2 {
+  width: 100%;
+  height: 100%;
+  padding: 0px 10px;
+  display: flex;
+  align-items: center;
+}
 .Post-Append-Tag-User {
   display: flex;
   width: 550px;
@@ -79,6 +87,7 @@
 .Post-Upload-buttons {
   display: flex;
   justify-content: flex-end;
+  margin: 10px 5px;
 }
 /* postScheduleAppend css */
 .Post-Schedule-Append-Form,
