--- a/frontend/src/Components/Profile/PostAppend.css
+++ b/frontend/src/Components/Profile/PostAppend.css
@@ -38,6 +38,21 @@
   width: 520px;
   height: 20px;
 }
+
+.selectColor {
+  width: 40px;
+  height: 40px;
+  margin: 0px 5px;
+}
+.selectColor:hover {
+  cursor: pointer;
+}
+.selectColorChange {
+  width: 20px;
+  height: 20px;
+  border-radius: 50px;
+}
+
 #post_text {
   width: 520px;
 }
