--- a/frontend/src/Components/Profile/PostAppend.css
+++ b/frontend/src/Components/Profile/PostAppend.css
@@ -5,10 +5,14 @@
   padding: 10px 20px;
   font-size: 20px;
 }
-.Post-Append-titleName {
-  padding-top: 10px;
+.post-append-header {
+  display: flex;
+  justify-content: space-between;
   background-color: rgba(20, 81, 51, 0.8);
+  padding-top: 10px;
   height: 60px;
+}
+.Post-Append-titleName {
   display: flex;
 }
 .Post-Append-Group > div > .makeStyles-formControl {
@@ -40,17 +44,23 @@
 }
 
 .selectColor {
-  width: 40px;
-  height: 40px;
-  margin: 0px 5px;
+  border-radius: 50px;
+  display: flex;
+  align-self: center;
+  margin-right: 20px;
+  margin-bottom: 10px;
 }
 .selectColor:hover {
   cursor: pointer;
 }
-.selectColorChange {
-  width: 20px;
-  height: 20px;
+.colorChange {
+  width: 30px;
+  height: 30px;
   border-radius: 50px;
+  display: flex;
+  justify-content: center;
+  font-size: 0px;
+  border: 2px solid white;
 }
 
 #post_text {
