--- a/frontend/src/Components/Profile/ProfilePage.css
+++ b/frontend/src/Components/Profile/ProfilePage.css
@@ -255,6 +255,6 @@ article {
   margin-left: 3px;
   height: 475px;
   width: 600px;
-  border: 1px solid lightgray;
-  border-radius: 10px;
+  /* border: 1px solid lightgray;
+  border-radius: 10px; */
 }
