[frontend] 타임라인 type1 구현
-데이터 전달시 실제 값들이 보여지게 구현

--- a/frontend/src/Components/Calendar/Calendar.css
+++ b/frontend/src/Components/Calendar/Calendar.css
@@ -55,6 +55,10 @@
   cursor: default;
 }
 
+.borderLeft {
+  border-left: 1px solid #ddd;
+}
+
 /* .cell:hover .bg{
     text-decoration: overline;
 } */
