--- a/frontend/src/Components/Timeline/Timeline.css
+++ b/frontend/src/Components/Timeline/Timeline.css
@@ -216,58 +216,14 @@ fieldset {
 }
 
 /* 일정만 => Week일때 */
-
-.timeline-schedule {
-  flex-direction: column;
-  width: 100%;
-  height: 100%;
-  box-shadow: 0px 1px 2px rgba(161, 159, 159, 0.8);
-  background-color: white;
-  padding: 5px;
-}
-.timeline-schedule-shared {
+.timeline-week-info {
   display: flex;
   flex-direction: column;
-}
-.timeline-schedule-context {
-  height: 40px;
-  display: flex;
-  align-items: center;
-  padding-left: 10px;
-  font-size: 18px;
-}
-.timeline-schedule-title,
-.timeline-schedule-date {
-  height: 40px;
-  display: flex;
-  align-items: center;
-  padding-left: 10px;
-  font-size: 18px;
-  font-weight: bold;
+  width: 500px;
+  padding: 5px 10px;
+  height: 280px;
 }
 
-.timeline-schedule-info {
-  height: 170px;
-  width: 860px;
-  flex-direction: column;
-}
-
-.timeline-schedule-weekTable {
-  margin: 5px 10px;
-}
-table {
-  width: 100%;
-  border-radius: 5px;
-  box-shadow: 0px 1px 3px rgba(161, 159, 159, 0.7);
-}
-th,
-td {
-  border: 1px solid rgba(161, 159, 159, 0.5);
-}
-td {
-  height: 90px;
-  text-align: center;
-}
 /* 일정하나 */
 .timeline-onlyschedule-info {
   height: 100px;
