--- a/frontend/src/Components/default.css
+++ b/frontend/src/Components/default.css
@@ -1,44 +1,63 @@
 @import url('https://fonts.googleapis.com/css?family=Gothic+A1&display=swap');
 
 /*기본 요소*/
-*{
-    margin:0; 
-    padding:0; 
-    font-family: 'Gothic A1', sans-serif  !important;
-    box-sizing:border-box;
+* {
+  margin: 0;
+  padding: 0;
+  font-family: 'Gothic A1', sans-serif !important;
+  box-sizing: border-box;
 }
 
-ul,ol,li{list-style:none;}
-a{outline:0; text-decoration:none; color:#333;}
-img{border:none;}
-
-html, body, #root, #wrapper{
-    width: 100%;
-    height: 100%;
+ul,
+ol,
+li {
+  list-style: none;
 }
-body{
-    display: flex;
-    min-width: 1300px;
-    flex-direction: column;
-    font-family: 'Gothic A1', sans-serif;
-    font-size:10pt; 
-    color:#333; 
-    background : #f9f9f9;
+a {
+  outline: 0;
+  text-decoration: none;
+  color: #333;
+}
+img {
+  border: none;
+}
+
+html,
+body,
+#root,
+#wrapper {
+  width: 100%;
+  height: 100%;
+}
+html {
+  overflow: visible !important;
+}
+body {
+  display: flex;
+  min-width: 1300px;
+  flex-direction: column;
+  font-family: 'Gothic A1', sans-serif;
+  font-size: 10pt;
+  color: #333;
+  background: #f9f9f9;
 }
 /*form 요소*/
-select, input, button, textarea, button{
-	background:#fff;
-	border:1px solid #a3a3a3;
-    vertical-align:middle;
+select,
+input,
+button,
+textarea,
+button {
+  background: #fff;
+  border: 1px solid #a3a3a3;
+  vertical-align: middle;
 }
 
-#page{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+#page {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
-
 
 /* nav{
     display: flex;
