[frontend] 사진 클릭 후 모달 띄우기

--- a/frontend/src/Components/Profile/ProfilePage.css
+++ b/frontend/src/Components/Profile/ProfilePage.css
@@ -251,3 +251,7 @@ nav > div {
   /* border: 1px solid lightgray;
   border-radius: 10px; */
 }
+
+.MuiDialog-paperWidthSm {
+  max-width: 100% !important;
+}
