[frontend] 공유 타임라인 1차수정

--- a/frontend/src/Components/default.css
+++ b/frontend/src/Components/default.css
@@ -22,13 +22,13 @@ img {
   border: none;
 }
 
-html,
+/* html,
 body,
 #root,
 #wrapper {
   width: 100%;
   height: 100%;
-}
+} */
 html {
   overflow: visible !important;
 }
