--- a/frontend/src/Components/Header/header.css
+++ b/frontend/src/Components/Header/header.css
@@ -55,6 +55,7 @@ header {
 
 #header-right .header-ring {
   margin-left: 12px;
+  cursor: pointer;
 }
 
 #header-right .profile-icon {
@@ -114,7 +115,7 @@ header {
   align-content: center !important;
   position: absolute;
   top: 0;
-  right: 10px;
+  right: 4px;
 }
 
 .notify-list {
