[frontend] 공유 타임라인 최종완성
-공유 타임라인 디자인 수정
-공유 타임라인 기능 추가 (선택시 자세한 일정 보여주기)
-헤더메뉴 그룹란 버튼 곂치는 오류 수정
-프로필 캘린더 버그 수정
-로그인창에 대한 CSS 수정

--- a/frontend/src/Components/Header/header.css
+++ b/frontend/src/Components/Header/header.css
@@ -45,11 +45,7 @@ header {
   color: white;
 }
 
-#header-right
-  > .search-user
-  > .makeStyles-search-155
-  > div
-  > .makeStyles-inputInput-158 {
+#header-right > .search-user > .makeStyles-search-155 > div > .makeStyles-inputInput-158 {
   color: white !important;
 }
 
@@ -114,7 +110,7 @@ header {
   align-content: center !important;
   position: absolute;
   top: 0;
-  right: 10px;
+  right: 0;
 }
 
 .notify-list {
