--- a/frontend/src/Components/default.css
+++ b/frontend/src/Components/default.css
@@ -22,13 +22,13 @@ img {
   border: none;
 }
 
-/* html,
-body,
-#root,
-#wrapper {
-  width: 100%;
-  height: 100%;
-} */
+html,
+body {
+  min-width: 100%;
+  min-height: 100%;
+}
+/* #root,
+#wrapper */
 html {
   overflow: visible !important;
 }
