--- a/frontend/src/Components/Login/LoginPage.css
+++ b/frontend/src/Components/Login/LoginPage.css
@@ -1,17 +1,13 @@
 #index-page {
-  width: 100%;
-  height: 100%;
-}
-
-#index-page {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100%;
-  height: 100%;
+  min-width: 100%;
+  min-height: 100%;
   /* background: no-repeat fixed linear-gradient(-225deg, RGB(255, 223, 75, 0.5), RGB(0, 168, 255, 0.5)); */
   /* background-color: rgba(64,115,159,0.9); */
   background-color: rgba(20, 81, 51, 0.8);
+  position: fixed;
 }
 
 .icon {
