[frontend] HeaderMenu 설정부분 마크업
- 계정, 알림, 공개범위, 보안, 도움말
- from.Pairypitt 추가

--- a/frontend/src/Components/Profile/ProfilePage.css
+++ b/frontend/src/Components/Profile/ProfilePage.css
@@ -172,8 +172,9 @@ nav > div {
   height: auto;
   object-fit: cover;
 }
+
 .timeline-profile-schedule:hover,
-.media-box:hover {
+.media-box-hover:hover {
   cursor: pointer;
   box-shadow: 1px 1px 10px rgba(100, 100, 100, 0.9);
 }
