--- a/frontend/src/Components/Header/UserEditor.css
+++ b/frontend/src/Components/Header/UserEditor.css
@@ -15,3 +15,11 @@
   height: 50px;
   margin-top: 30px;
 }
+
+.AlertStyle {
+  width: 450px;
+  height: 50px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
