--- a/frontend/src/Components/Header/header.css
+++ b/frontend/src/Components/Header/header.css
@@ -115,3 +115,8 @@ header {
 .notify-list-time {
   color: rgb(209, 204, 192);
 }
+/* TodoList */
+.before-todo:hover {
+  background-color: rgba(209, 204, 192, 0.2);
+  cursor: pointer;
+}
