[frontend]타임라인 사진부분 디테일 작업
-공유 타임라인은 작게 이미지보인후 선택시 큰 이미지로 출력
-사진 타임라인 슬라이드 기능 추가

--- a/frontend/src/Components/Timeline/Timeline.css
+++ b/frontend/src/Components/Timeline/Timeline.css
@@ -84,9 +84,10 @@
 }
 
 .timeline-picture {
+  position: relative;
   width: 500px;
   height: 340px;
-  padding: 5px;
+  overflow: hidden;
 }
 
 .timeline-picture > img {
@@ -113,6 +114,16 @@
   padding-top: 5px;
   font-size: 16px;
   line-height: 150%;
+}
+
+.timeline-picture-bottom {
+  border-radius: 50%;
+  height: 6px;
+  transition: all 0.2s ease-in-out;
+  width: 6px;
+  background: rgba(var(--eca, 255, 255, 255), 1);
+  margin-right: 2px;
+  transition: all 0.2s ease-in-out 0.2s;
 }
 
 .comment-reply-users {
