--- a/frontend/src/Components/Main/mainPage.css
+++ b/frontend/src/Components/Main/mainPage.css
@@ -38,6 +38,7 @@ main #timeline-list {
   }
   .timeline-chatting-button {
     display: none;
+    position: relative;
   }
 }
 aside {
@@ -100,4 +101,31 @@ aside > .aside-profile {
 .aside-profile-TodaySchedule > ul > li {
   padding: 2px;
   margin-left: 5px;
+}
+
+.chatting-wrap {
+  position: absolute;
+  background-color: rgba(253, 253, 253, 0.9);
+  display: flex;
+  flex-direction: column;
+  border-radius: 10px;
+}
+
+.chatting-cell {
+  cursor: pointer;
+  background-color: white;
+}
+
+.chatting-cell:hover {
+  background-color: #c1d6d0;
+}
+
+.chatting-list {
+  position: absolute;
+  right: 0;
+  height: 100%;
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  border-radius: 10px;
 }
