[frontend] 채팅 디자인 색 수정

--- a/frontend/src/Components/Main/mainPage.css
+++ b/frontend/src/Components/Main/mainPage.css
@@ -117,7 +117,7 @@ aside > .aside-profile {
 }
 
 .chatting-cell:hover {
-  background-color: #c1d6d0;
+  background-color: #f1d3de;
 }
 
 .chatting-list {
