--- a/frontend/src/Components/Profile/ProfilePage.css
+++ b/frontend/src/Components/Profile/ProfilePage.css
@@ -49,7 +49,7 @@
 }
 #main-profile-info {
   display: flex;
-  height: 500px;
+  height: 565px;
   margin-right: 20px;
   box-shadow: 0px 1px 2px rgba(161, 159, 159, 0.8);
   background-color: white;
@@ -58,9 +58,10 @@
 
 #userinfo {
   width: 240px;
-  height: 100%;
+  /* height: 100%; */
   display: flex;
   flex-direction: column;
+  position: relative;
 }
 
 #user-image {
@@ -83,15 +84,18 @@
   flex-direction: column;
   align-items: center;
   padding: 10px;
+  flex: 1;
+  justify-content: space-around;
 }
 
-.info ul li {
+/* .info ul li {
   font-size: 18px;
   padding-bottom: 5px;
   text-align: center;
-}
+} */
 .name {
   font-weight: bold;
+  font-size: 22px;
 }
 .followerName,
 .followName {
