--- a/frontend/src/Components/Profile/PostAppend.css
+++ b/frontend/src/Components/Profile/PostAppend.css
@@ -78,10 +78,12 @@
 
 .Post-Append-Media {
   display: flex;
-  justify-content: center;
   width: 530px;
-  border: 1px solid lightgray;
-  margin: 5px 15px;
+  margin: 5px 10px;
+  overflow-x: auto;
+}
+.Post-Append-Media::-webkit-scrollbar {
+  height: 8px;
 }
 .schedule-media-button {
   display: flex;
