--- a/frontend/src/Components/Profile/PostAppend.css
+++ b/frontend/src/Components/Profile/PostAppend.css
@@ -82,9 +82,11 @@
   margin: 5px 10px;
   overflow-x: auto;
 }
-.Post-Append-Media::-webkit-scrollbar {
-  height: 8px;
+.Post-Append-Media2:hover {
+  background-color: rgba(161, 159, 159, 0.3);
+  cursor: pointer;
 }
+
 .schedule-media-button {
   display: flex;
   height: 40px;
@@ -98,6 +100,7 @@
   background-color: rgba(161, 159, 159, 0.3);
   cursor: pointer;
 }
+
 .clicked {
   width: 100%;
   height: 100%;
