[frontend] 프로필 Nav 사진 수정 2차

--- a/frontend/src/Components/Profile/ProfilePage.css
+++ b/frontend/src/Components/Profile/ProfilePage.css
@@ -159,6 +159,8 @@ nav > div {
 .profile-MediaTimeline {
   display: flex;
   flex-wrap: wrap;
+  /* flex-flow: row-reverse; */
+  /* flex-flow: wrap-reverse; */
   align-self: center;
   width: 880px;
   margin-left: 10px;
