[frontend] 일정 추가 컴포넌트 구체화

--- a/frontend/src/Components/Profile/PostAppend.css
+++ b/frontend/src/Components/Profile/PostAppend.css
@@ -117,8 +117,8 @@
 }
 .Post-Append-Tag-User {
   display: flex;
+  flex-wrap: wrap;
   width: 550px;
-  height: 50px;
   padding: 10px 0px;
 }
 .MuiFormGroup-root {
