[frontend] 캘린더 일정 추가 백엔드 연동, 버그 수정

--- a/frontend/src/Components/Calendar/Calendar.css
+++ b/frontend/src/Components/Calendar/Calendar.css
@@ -163,3 +163,18 @@
   align-items: center;
   cursor: pointer;
 }
+
+.animation {
+  animation-name: ani;
+  animation-duration: 0.3s;
+  animation-delay: 0;
+}
+
+@keyframes ani {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 100%;
+  }
+}
