--- a/frontend/src/Components/Profile/PostAppend.css
+++ b/frontend/src/Components/Profile/PostAppend.css
@@ -10,7 +10,7 @@
   justify-content: space-between;
   background-color: rgba(20, 81, 51, 0.8);
   padding-top: 10px;
-  height: 60px;
+  min-height: 60px;
 }
 .Post-Append-titleName {
   display: flex;
